<resources>
    <string name="app_name">to do list</string>
    <string name="task_title">Tarefas</string>
    <string name="ctt_desc_add_task">Adicionar Tarefa</string>
    <string name="title_toolbar">To Do</string>

    <!-- Bottom menu main fragment-->
    <string name="archive_task">Arquivados</string>
    <string name="archive_desc">Tarefa arquivadas para serem ativas em um outro momento</string>
    <string name="home_task">Inicio</string>
    <string name="home_desc">Lista com todas as tarefas criadas</string>
    <string name="favorite_task">Favoritos</string>
    <string name="favorite_desc">Lista com todas as tarefas favoritas</string>
    <string name="statistics_task">Estatisticas</string>
    <string name="statistic_desc">Porcentagem das tarefas concuídas e não finalizadas</string>

    <!-- Overflow menu main fragment-->
    <string name="title_filter_item">Filtrar tarefas</string>
    <string name="title_all_tasks">Todas tarefas</string>
    <string name="title_tasks_done">Tarefas concluídas</string>
    <string name="title_tasks_opened">Tarefas Abertas</string>

    <!-- add_task_fragment layout -->
    <string name="title_label">Titulo</string>
    <string name="description_label">Descrição</string>
    <string name="date_label">Data</string>
    <string name="time_label">Hora</string>
    <string name="new_task_title_label">Adicionar Nova Tarefa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_task">Criar tarefa</string>
    <string name="task_completed">Tarefa marcada como realizada</string>
    <string name="task_active">Tarefa marcada como ativa</string>
    <string name="desc_fab_edit">Botão para navegar para tela de editar a tarefa</string>
    <string name="delete_task">excluir tarefa</string>
    <string name="add_favorite">adicionar aos favoritos</string>
    <string name="add_archive">arquivar tarefa</string>
    <string name="task_details">Tarefa</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="edit_task">Editar Tarefa</string>
    <string name="task_updated">Tareda atualizada</string>
    <string name="task_created">Tafefa criada</string>
    <string name="task_deleted">Tarefa excluída</string>
    <string name="task_content_not_void">Tarefa não pode ter campos vazios.</string>
    <string name="error_obtain_tasks">Ocorreu um error na obtenção das tarefas.</string>
    <string name="error_loading_task">Não foi possível obter a tarefa</string>

</resources>