<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_dest"
        android:title="@string/home_task"
        android:icon="@drawable/ic_home_24"
        android:contentDescription="@string/home_desc"/>

    <item
        android:id="@+id/archive_dest"
        android:title="@string/archive_task"
        android:icon="@drawable/ic_archive_24"
        android:contentDescription="@string/archive_desc"/>

    <item
        android:id="@+id/favorite_dest"
        android:title="@string/favorite_task"
        android:icon="@drawable/ic_favorite_24"
        android:contentDescription="@string/favorite_desc"/>

    <item
        android:id="@+id/statistics_dest"
        android:title="@string/statistics_task"
        android:icon="@drawable/ic_statistic_24"
        android:contentDescription="@string/statistic_desc"/>
</menu>